--- a/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -874,6 +874,27 @@ EditorNotifyObject.AnimNotify=True
 EditorNotifyObject.Trigger Settings=True
 EditorNotifyObject.Category=True
 SoundNodeWavePlayer.WavePlayer=True
+Collision_Test_C.TransformCommon=True
+Collision_Test_C.Default=True
+Collision_Test_C.Rendering=True
+Collision_Test_C.Replication=True
+Collision_Test_C.Collision=True
+Collision_Test_C.Input=True
+Collision_Test_C.Actor=True
+ThirdPersonWalk_Blueprint_C.TransformCommon=True
+ThirdPersonWalk_Blueprint_C.Animation=True
+ThirdPersonWalk_Blueprint_C.Mesh=True
+ThirdPersonWalk_Blueprint_C.Materials=True
+ThirdPersonWalk_Blueprint_C.Clothing=True
+ThirdPersonWalk_Blueprint_C.Physics=True
+ThirdPersonWalk_Blueprint_C.MasterPoseComponent=True
+ThirdPersonWalk_Blueprint_C.Lighting=True
+ThirdPersonWalk_Blueprint_C.ClothingSimulation=True
+ThirdPersonWalk_Blueprint_C.SkinWeights=True
+ThirdPersonWalk_Blueprint_C.VirtualTexture=True
+ThirdPersonWalk_Blueprint_C.Tags=True
+ThirdPersonWalk_Blueprint_C.Activation=True
+ThirdPersonWalk_Blueprint_C.Cooking=True
 
 [AssetEditorToolkitTabLocation]
 /Game/AVRFramework/Blueprints/Navigation/BP_PlayerPosition_Start.BP_PlayerPosition_Start=1
@@ -924,7 +945,7 @@ SoundNodeWavePlayer.WavePlayer=True
 bHideUnrelatedNodes=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=457.000 Y=0.000
@@ -1748,12 +1769,13 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Bo
 MaterialInstanceConstant=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Solitary/Triggers/Disappear_Walk.Disappear_Walk;
+RecentlyPlaced=/Game/Solitary/Triggers/ThirdPersonWalk_Blueprint.ThirdPersonWalk_Blueprint;
 RecentlyPlaced=/Game/Solitary/Triggers/AudioTriggers.AudioTriggers;
 RecentlyPlaced=/Game/Solitary/Triggers/ChainAnim.ChainAnim;
 RecentlyPlaced=/Game/Solitary/Triggers/Collision_Test.Collision_Test;
 RecentlyPlaced=/Game/Solitary/Triggers/Test2.Test2;
 RecentlyPlaced=/Game/Solitary/Triggers/Walk_Start_Stop.Walk_Start_Stop;
-RecentlyPlaced=/Game/Solitary/Triggers/Disappear_Walk.Disappear_Walk;
 RecentlyPlaced=/Game/Solitary/Animations/Note_5/TheHole_Note5.TheHole_Note5;
 RecentlyPlaced=/Game/Solitary/Animations/clock/clock_12_to_12_Anim.clock_12_to_12_Anim;
 RecentlyPlaced=/Game/Solitary/Animations/clock/clock_12_to_12.clock_12_to_12;
@@ -1767,7 +1789,6 @@ RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Med_Clock_Hand
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Towel/Towel.Towel;
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Pencil/Pencil_low03.Pencil_low03;
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Bible/Bible_low03.Bible_low03;
-RecentlyPlaced=/Game/Solitary/TriggerBox.TriggerBox;
 
 [DetailPropertyExpansion]
 BP_GameMode_Solitary_C="\"Object.Levels.Levels\" "
