Starting testing on sequencing things in combination with trigger boxes

--- a/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,29 +113,30 @@ CurrentPosGridSize=0
 LastLevel=/Game/Solitary/Maps/Solitary
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/testsequence.testsequence
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Solitary/Audio/13712__acclivity__clockticking_Cue
-MRUItem1=/Game/Solitary/Triggers/AudioTriggers
-MRUItem2=/Game/Solitary/Animations/clock/clock_12_to_12_Anim
-MRUItem3=/Game/Solitary/Textures/placeholder_brick/Placeholder_brick
-MRUItem4=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_DoorFrameMat
-MRUItem5=/Game/AVRFramework/Framework/BP_GameInstance_Main
-MRUItem6=/Game/Solitary/Info/BP_GameMode_Solitary
-MRUItem7=/Game/Solitary/Triggers/Test2
-MRUItem8=/Game/Solitary/Triggers/Test
-MRUItem9=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem10=/Game/Solitary/Triggers/PlayerCollission_AnimationTrigger
-MRUItem11=/Game/Solitary/Triggers/Walk_Start_Stop
-MRUItem12=/Game/Solitary/Triggers/Disappear_Walk
-MRUItem13=/Game/Solitary/Triggers/ChainAnim
-MRUItem14=/Game/AVRFramework/Animations/Mannequin/ThirdPersonRun
-MRUItem15=/Game/Solitary/Triggers/Walk_Disappear
-MRUItem16=/Game/AVRFramework/Meshes/Pawn/Manequin/SMesh_Framework_Movement_Mannequin
-MRUItem17=/Game/Solitary/Triggers/ThirdPersonWalk_Blueprint
-MRUItem18=/Game/Solitary/Triggers/TriggerBox
-MRUItem19=/Game/Solitary/Animations/Note_5/TheHole_Note5
+MRUItem0=/Game/testsequence
+MRUItem1=/Game/Solitary/Animations/TheHole_Note8
+MRUItem2=/Game/Solitary/Audio/13712__acclivity__clockticking_Cue
+MRUItem3=/Game/Solitary/Triggers/AudioTriggers
+MRUItem4=/Game/Solitary/Animations/clock/clock_12_to_12_Anim
+MRUItem5=/Game/Solitary/Textures/placeholder_brick/Placeholder_brick
+MRUItem6=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_DoorFrameMat
+MRUItem7=/Game/AVRFramework/Framework/BP_GameInstance_Main
+MRUItem8=/Game/Solitary/Info/BP_GameMode_Solitary
+MRUItem9=/Game/Solitary/Triggers/Test2
+MRUItem10=/Game/Solitary/Triggers/Test
+MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem12=/Game/Solitary/Triggers/PlayerCollission_AnimationTrigger
+MRUItem13=/Game/Solitary/Triggers/Walk_Start_Stop
+MRUItem14=/Game/Solitary/Triggers/Disappear_Walk
+MRUItem15=/Game/Solitary/Triggers/ChainAnim
+MRUItem16=/Game/AVRFramework/Animations/Mannequin/ThirdPersonRun
+MRUItem17=/Game/Solitary/Triggers/Walk_Disappear
+MRUItem18=/Game/AVRFramework/Meshes/Pawn/Manequin/SMesh_Framework_Movement_Mannequin
+MRUItem19=/Game/Solitary/Triggers/ThirdPersonWalk_Blueprint
 
 [DetailCategories]
 BP_PlayerPosition_Start_C.Tick=True
@@ -895,6 +896,20 @@ ThirdPersonWalk_Blueprint_C.VirtualTexture=True
 ThirdPersonWalk_Blueprint_C.Tags=True
 ThirdPersonWalk_Blueprint_C.Activation=True
 ThirdPersonWalk_Blueprint_C.Cooking=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Light=True
+PointLightComponent.Rendering=True
+PointLightComponent.Lightmass=True
+PointLightComponent.Performance=True
+PointLightComponent.LightFunction=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.RayTracing=True
+PointLightComponent.Tags=True
+PointLightComponent.Cooking=True
+MovieSceneAudioSection.Section=True
+MovieSceneAudioSection.Audio=True
+MovieSceneAudioSection.Attenuation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/AVRFramework/Blueprints/Navigation/BP_PlayerPosition_Start.BP_PlayerPosition_Start=1
@@ -940,6 +955,7 @@ ThirdPersonWalk_Blueprint_C.Cooking=True
 /Game/Solitary/Triggers/Collision_Test.Collision_Test=1
 /Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_DoorFrameMat.Solitary_CellDoor_DoorFrameMat=1
 /Game/Solitary/Audio/13712__acclivity__clockticking_Cue.13712__acclivity__clockticking_Cue=1
+/Game/Solitary/Animations/TheHole_Note8.TheHole_Note8=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -2014,5 +2030,46 @@ CustomFavorites=(FieldName="/Script/Engine.Actor:K2_DestroyActor",NodeName="/Scr
 CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetAllActorsOfClass",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
 CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_SpawnActorFromClass")
 CurrentProfile=CustomProfile
+
+[LevelSequenceEditor SequencerSettings]
+AutoChangeMode=AutoKey
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bLabelBrowserVisible=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bShowCombinedKeyframes=True
+bShowChannelColors=False
+bDeleteKeysWhenTrimming=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=True
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
 
 
