more sequence stuff

--- a/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,29 +113,30 @@ CurrentPosGridSize=0
 LastLevel=/Game/Solitary/Maps/Solitary
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/testsequence.testsequence
 
 [ContentBrowserRecent]
-MRUItem0=/Engine/BasicShapes/Plane
-MRUItem1=/Game/Solitary/Triggers/Disappear_Walk
-MRUItem2=/Game/Solitary/Triggers/letter_Blueprint
-MRUItem3=/Game/testsequence
-MRUItem4=/Game/Solitary/Animations/TheHole_Note8
-MRUItem5=/Game/Solitary/Audio/13712__acclivity__clockticking_Cue
-MRUItem6=/Game/Solitary/Triggers/AudioTriggers
-MRUItem7=/Game/Solitary/Animations/clock/clock_12_to_12_Anim
-MRUItem8=/Game/Solitary/Textures/placeholder_brick/Placeholder_brick
-MRUItem9=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_DoorFrameMat
-MRUItem10=/Game/AVRFramework/Framework/BP_GameInstance_Main
-MRUItem11=/Game/Solitary/Info/BP_GameMode_Solitary
-MRUItem12=/Game/Solitary/Triggers/Test2
-MRUItem13=/Game/Solitary/Triggers/Test
-MRUItem14=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem15=/Game/Solitary/Triggers/PlayerCollission_AnimationTrigger
-MRUItem16=/Game/Solitary/Triggers/Walk_Start_Stop
-MRUItem17=/Game/Solitary/Triggers/ChainAnim
-MRUItem18=/Game/AVRFramework/Animations/Mannequin/ThirdPersonRun
-MRUItem19=/Game/Solitary/Triggers/Walk_Disappear
+MRUItem0=/Game/Solitary/Audio/Light-Electric-Buzzing-www_fesliyanstudios_com
+MRUItem1=/Game/testsequence
+MRUItem2=/Engine/BasicShapes/Plane
+MRUItem3=/Game/Solitary/Triggers/Disappear_Walk
+MRUItem4=/Game/Solitary/Triggers/letter_Blueprint
+MRUItem5=/Game/Solitary/Animations/TheHole_Note8
+MRUItem6=/Game/Solitary/Audio/13712__acclivity__clockticking_Cue
+MRUItem7=/Game/Solitary/Triggers/AudioTriggers
+MRUItem8=/Game/Solitary/Animations/clock/clock_12_to_12_Anim
+MRUItem9=/Game/Solitary/Textures/placeholder_brick/Placeholder_brick
+MRUItem10=/Game/Solitary/Meshes/Final_Meshes/Door/Solitary_CellDoor_DoorFrameMat
+MRUItem11=/Game/AVRFramework/Framework/BP_GameInstance_Main
+MRUItem12=/Game/Solitary/Info/BP_GameMode_Solitary
+MRUItem13=/Game/Solitary/Triggers/Test2
+MRUItem14=/Game/Solitary/Triggers/Test
+MRUItem15=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem16=/Game/Solitary/Triggers/PlayerCollission_AnimationTrigger
+MRUItem17=/Game/Solitary/Triggers/Walk_Start_Stop
+MRUItem18=/Game/Solitary/Triggers/ChainAnim
+MRUItem19=/Game/AVRFramework/Animations/Mannequin/ThirdPersonRun
 
 [DetailCategories]
 BP_PlayerPosition_Start_C.Tick=True
@@ -935,6 +936,8 @@ Comp_Actor_C.ComponentReplication=True
 Comp_Actor_C.Activation=True
 Comp_Actor_C.Cooking=True
 Comp_Actor_C.Events=True
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
 
 [AssetEditorToolkitTabLocation]
 /Game/AVRFramework/Blueprints/Navigation/BP_PlayerPosition_Start.BP_PlayerPosition_Start=1
@@ -1812,6 +1815,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Bo
 MaterialInstanceConstant=
 
 [PlacementMode]
+RecentlyPlaced=/Game/Tally.Tally;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Solitary/Animations/TheHole_Note5.TheHole_Note5;
 RecentlyPlaced=/Game/Solitary/Animations/TheHole_Note9.TheHole_Note9;
@@ -1831,7 +1835,6 @@ RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/clock.clock;
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Med_Clock_Hands_Clock_hour_hand_low.Clock_med_Med_Clock_Hands_Clock_hour_hand_low;
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Med_Clock_Clock_minute_hand_low_Hands.Clock_med_Med_Clock_Clock_minute_hand_low_Hands;
 RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Med_Clock_Clock_base.Clock_med_Med_Clock_Clock_base;
-RecentlyPlaced=/Game/Solitary/Meshes/Final_Meshes/Clock/Clock_med_Clock_glass_Med_Clock.Clock_med_Clock_glass_Med_Clock;
 
 [DetailPropertyExpansion]
 BP_GameMode_Solitary_C="\"Object.Levels.Levels\" "
