--- a/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1128,7 +1128,7 @@ TriggerVolume.Actor=True
 bHideUnrelatedNodes=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=616.000 Y=72.000
