toilet upside down

--- a/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1169,7 +1169,7 @@ SpotLightComponent.Cooking=True
 bHideUnrelatedNodes=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=616.000 Y=72.000
