--- a/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1200,7 +1200,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Solitary/Triggers
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2004,6 +2004,7 @@ MaterialInstanceConstant=
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Solitary/Audio/Sniffling.Sniffling;
 RecentlyPlaced=/Game/Solitary/Triggers/AudioTriggers.AudioTriggers;
@@ -2023,7 +2024,6 @@ RecentlyPlaced=/Game/Solitary/Triggers/Letter.Letter;
 RecentlyPlaced=/Script/Engine.DecalActor;/Engine/Transient.ActorFactoryDeferredDecal_0
 RecentlyPlaced=/Game/Solitary/Textures/Decals/Blood/Blood.Blood;
 RecentlyPlaced=/Game/Solitary/Animations/note_15.note_15;
-RecentlyPlaced=/Game/Solitary/Animations/note_13+14.note_13+14;
 
 [DetailPropertyExpansion]
 BP_GameMode_Solitary_C="\"Object.Levels.Levels\" "
@@ -2058,6 +2058,8 @@ LightComponentBase="\"Object.Tags.ComponentTags\" "
 AudioComponent="\"Object.Tags.ComponentTags\" "
 Comp_Trigger_C="\"Object.Tags.ComponentTags\" "
 Comp_Actor_C="\"Object.Tags.ComponentTags\" "
+SpotLight="\"Object.Light.SpotLightComponent.Object.Light.LightColor\" "
+Light="\"Object.Light.SpotLightComponent.Object.Light.LightColor\" "
 
 [WorldBrowser]
 DisplayPaths=False
