--- a/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -116,26 +116,26 @@ LastLevel=/Game/Solitary/Maps/Solitary
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Beginning_Sequence
-MRUItem1=/Game/Solitary/Triggers/letter_Blueprint
-MRUItem2=/Game/Letter_Dialgue
-MRUItem3=/Game/testsequence
-MRUItem4=/Game/Solitary/Info/BP_GameMode_Solitary
-MRUItem5=/Game/Solitary/Meshes/Final_Meshes/Toilet/Toilet_low_bowl_low
-MRUItem6=/Game/Solitary/Meshes/Final_Meshes/Toilet/Toilet_low_base_low
-MRUItem7=/Game/After_Letter_Sequence
-MRUItem8=/Game/Solitary/Textures/Decals/Blood/Blood
-MRUItem9=/Game/AVRFramework/Blueprints/Components/Actor/Comp_Grab
-MRUItem10=/Game/Solitary/Triggers/Letter
-MRUItem11=/Game/Sequence_Blueprint
-MRUItem12=/Game/Solitary/Triggers/ChainAnim
-MRUItem13=/Game/Solitary/Textures/Decals/leaking_decal_Mat
-MRUItem14=/Engine/Functions/Engine_MaterialFunctions03/Blends/Blend_Screen
-MRUItem15=/Game/Solitary/Textures/Concrete_Floor_CIeling/Concrete
-MRUItem16=/Game/Solitary/Textures/Brick_Wall/White_Brick
-MRUItem17=/Game/Sequence_Pause
-MRUItem18=/Game/AVRFramework/Blueprints/Navigation/BP_PlayerPosition
-MRUItem19=/Game/Solitary/Triggers/BP_PauseSequence
+MRUItem0=/Game/Solitary/Audio/Sound_Effects/13712__acclivity__clockticking
+MRUItem1=/Game/Beginning_Sequence
+MRUItem2=/Game/Solitary/Triggers/letter_Blueprint
+MRUItem3=/Game/Letter_Dialgue
+MRUItem4=/Game/testsequence
+MRUItem5=/Game/Solitary/Info/BP_GameMode_Solitary
+MRUItem6=/Game/Solitary/Meshes/Final_Meshes/Toilet/Toilet_low_bowl_low
+MRUItem7=/Game/Solitary/Meshes/Final_Meshes/Toilet/Toilet_low_base_low
+MRUItem8=/Game/After_Letter_Sequence
+MRUItem9=/Game/Solitary/Textures/Decals/Blood/Blood
+MRUItem10=/Game/AVRFramework/Blueprints/Components/Actor/Comp_Grab
+MRUItem11=/Game/Solitary/Triggers/Letter
+MRUItem12=/Game/Sequence_Blueprint
+MRUItem13=/Game/Solitary/Triggers/ChainAnim
+MRUItem14=/Game/Solitary/Textures/Decals/leaking_decal_Mat
+MRUItem15=/Engine/Functions/Engine_MaterialFunctions03/Blends/Blend_Screen
+MRUItem16=/Game/Solitary/Textures/Concrete_Floor_CIeling/Concrete
+MRUItem17=/Game/Solitary/Textures/Brick_Wall/White_Brick
+MRUItem18=/Game/Sequence_Pause
+MRUItem19=/Game/AVRFramework/Blueprints/Navigation/BP_PlayerPosition
 
 [DetailCategories]
 BP_PlayerPosition_Start_C.Tick=True
@@ -1164,6 +1164,7 @@ SpotLightComponent.Cooking=True
 /Game/Solitary/Triggers/Letter.Letter=1
 /Game/Solitary/Meshes/Final_Meshes/Toilet/Toilet_low_base_low.Toilet_low_base_low=1
 /Game/Solitary/Meshes/Final_Meshes/Toilet/Toilet_low_bowl_low.Toilet_low_bowl_low=1
+/Game/Solitary/Audio/Sound_Effects/13712__acclivity__clockticking.13712__acclivity__clockticking=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
