--- a/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/The_Hole/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -116,9 +116,9 @@ LastLevel=/Game/Solitary/Maps/Solitary
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Solitary/Meshes/placeholders/lambert1
-MRUItem1=/Game/Solitary/Animations/note_11
-MRUItem2=/Game/Beginning_Sequence
+MRUItem0=/Game/Beginning_Sequence
+MRUItem1=/Game/Solitary/Meshes/placeholders/lambert1
+MRUItem2=/Game/Solitary/Animations/note_11
 MRUItem3=/Game/Solitary/Maps/Solitary
 MRUItem4=/Game/Solitary/Info/BP_Info_Level_Solitary_Level1
 MRUItem5=/Game/Solitary/Info/BP_Info_Level_Solitary_Menu
@@ -1345,10 +1345,10 @@ BlockingVolume.Actor=True
 bHideUnrelatedNodes=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 
 [RootWindow]
-ScreenPosition=X=616.000 Y=72.000
+ScreenPosition=X=598.000 Y=0.000
 WindowSize=X=1280.000 Y=940.000
 InitiallyMaximized=True
 
@@ -1376,7 +1376,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Solitary/Textures/Concrete_Floor_CIeling
+ContentBrowserTab1.SelectedPaths=/Game/Solitary/Animations
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2220,7 +2220,7 @@ GameModeBase="\"Object.Levels.Levels\" "
 Info="\"Object.Levels.Levels\" "
 BP_Info_Controls_Solitary_C="\"Object.Controls.ControllerSet\" "
 BP_Info_Controls_C="\"Object.Controls.ControllerSet\" "
-Object=
+Object="\"Object.Tags.ComponentTags\" "
 BP_Info_Level_Solitary_Level1_C="\"Object.StreamingLevel.LevelsToLoad\" \"Object.Transition.Transition\" \"Object.Transition.Transition.SkysphereInfo_2_B82AB16A4FF8B49C2F03BF93DBE6E4D6\" \"Object.Panel.Panel\" \"Object.Panel.Panel.Background_Color_16_F81CF8B848E71EA5A94E4AA37C19A47E\" "
 BP_Info_Level_C="\"Object.StreamingLevel.LevelsToLoad\" \"Object.Transition.Transition\" \"Object.Transition.Transition.SkysphereInfo_2_B82AB16A4FF8B49C2F03BF93DBE6E4D6\" \"Object.Panel.Panel\" \"Object.Panel.Panel.Background_Color_16_F81CF8B848E71EA5A94E4AA37C19A47E\" "
 BP_Info_Level_Solitary_Menu_C="\"Object.StreamingLevel.LevelsToLoad\" \"Object.Transition.Transition\" \"Object.Transition.Transition.SkysphereInfo_2_B82AB16A4FF8B49C2F03BF93DBE6E4D6\" \"Object.Panel.Panel\" \"Object.Panel.Panel.Background_Color_16_F81CF8B848E71EA5A94E4AA37C19A47E\" "
@@ -2246,7 +2246,7 @@ AudioComponent="\"Object.Tags.ComponentTags\" "
 Comp_Trigger_C="\"Object.Tags.ComponentTags\" "
 Comp_Actor_C="\"Object.Tags.ComponentTags\" "
 SpotLight="\"Object.Light.SpotLightComponent.Object.Light.LightColor\" "
-Light="\"Object.Light.SpotLightComponent.Object.Light.LightColor\" "
+Light=
 Comp_Grab_C="\"Object.Tags.ComponentTags\" "
 BP_Menu_C=
 SkeletalMeshComponent="\"Object.Tags.ComponentTags\" "
